# MHDTurbulence

./: .gitignore  KH.md  LICENSE  README.md  index.html  modules.json  search.html
analysis/: .gitignore  Analysis.f90
cpp_kokkos_device/: annotated.html  boundary_8cpp.html  boundary_8cpp_source.html  boundary_8hpp.html  boundary_8hpp_source.html  classboundary__mod_1_1BoundaryArray-members.html  classboundary__mod_1_1BoundaryArray.html  classes.html  classhydflux__mod_1_1FieldArray-members.html  classhydflux__mod_1_1FieldArray.html  classhydflux__mod_1_1GridArray-members.html  classhydflux__mod_1_1GridArray.html  classhydro__arrays__mod_1_1Array4D-members.html  classhydro__arrays__mod_1_1Array4D.html  classmpi__dataio__mod_1_1FieldArray-members.html  classmpi__dataio__mod_1_1FieldArray.html  classmpi__dataio__mod_1_1GridArray-members.html  classmpi__dataio__mod_1_1GridArray.html  config_8hpp.html  config_8hpp_source.html  dir_415429b0e1e84004ff9e06078b69719c.html  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen-cpp__kokkos__device-main_8md.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  hydro__arrays_8hpp.html  hydro__arrays_8hpp_source.html  index.html  main_8cpp.html  main_8cpp_source.html  (+48 more)
src_cpp_kokkos_device/: CMakeLists.txt  CMakePresets.json  boundary.cpp  boundary.hpp  config.hpp  genbuild-cuda.sh  genbuild-omp.sh  genbuild.sh  main.cpp  main.hpp  mhd.cpp  mhd.hpp  mpi_config.cpp  mpi_config.hpp  output.cpp  output.hpp
(+538 files in other folders)
